=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2011-05-19  15:20:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-383
Fix and clarify code for KB projector orthogonalization

In routine kbproj, a saved variable was used to keep track
of the number of previous KB projectors with the same l. This
variable was only reset upon a change in l. This can lead
to errors if a species with a single l=0 KB complex is used.

The code has been streamlined, passing explicitly an index
that determines the sequence number of the projector.

modified:
  Src/atom.f

-----------------------------------------------------------------------
2011-05-03  16:10:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-382
Fix declaration in cgwf.F

A previous commit introduced a spurious dummy argument
"node", which should really be imported from a module.

modified:
  Src/cgwf.F

-----------------------------------------------------------------------
2011-05-03  14:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-381
Clarify mixing code in TranSiesta mode

If the TranSiesta code is compiled in, the user can choose between two
mixing options in the self-consistent cycle: density-matrix, or
Hamiltonian. The option chosen takes effect both for the initial
normal Siesta-style calculation, if needed, and for the "transiesta
mode" section.

The code in mixer.F and elsewhere has been streamlined, to make it
clear what the mixed objects are and avoid extraneous global
dependencies.

modified:
  Src/Makefile
  Src/m_ts_global_vars.f90
  Src/mixer.F
  Src/new_dm.F
  Src/state_init.F

-----------------------------------------------------------------------
2011-05-03  14:05:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-380